--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -3,7 +3,8 @@
   <h1>Add a new lesson</h1> 
   <%= simple_form_for @lesson, url: instructor_section_lessons_path(@current_section) do |f| %> 
     <%= f.input :title %> 
-    <%= f.input :subtitle %> 
+    <%= f.input :subtitle %>  
+    <%= f.input :video %>
     <br />
     <%= f.submit "Add the lesson" %>  
     <br />
