--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,6 +14,15 @@
         <br />
         <br />
         <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+      <% end %> 
+
+      <br />
+      <br /> 
+
+      <% if current_user && current_user.enrolled_in?(@course) %>
+        <h3 class="badge badge-info">You Are Enrolled!</h3>
+      <% else %>
+        <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
       <% end %>
     </div>
 
@@ -36,7 +45,7 @@
                 <br />
                 <%= link_to lesson_path(lesson) do %>
                   <b><%= lesson.title %></b> 
-                  <br />
+                  <br>
                   <br />
                   <%= lesson.subtitle %>
                 <% end %>
